...
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hMK-B0-5y5" userLabel="LoginTextField">
                                        <rect key="frame" x="139" y="226" width="97" height="30"/>
                                        <accessibility key="accessibilityConfiguration" label="login"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="97" id="lSv-F3-8MY"/>
                                        </constraints>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Dgy-E6-2Mr" userLabel="PasswordTextField">
                                        <rect key="frame" x="139" y="318" width="97" height="30"/>
                                        <accessibility key="accessibilityConfiguration" label="password"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fe5-Ta-fkB" customClass="MyButton" customModule="Shop" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="384" width="375" height="30"/>
                                        <accessibility key="accessibilityConfiguration" label="loginButton"/>
                                        <state key="normal" title="Login"/>
                                        <connections>
                                            <action selector="login:" destination="W2I-ze-ksQ" eventType="touchUpInside" id="5Uk-4k-BAx"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yUD-jo-ICn" customClass="MyButton" customModule="Shop" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="422" width="375" height="30"/>
                                        <accessibility key="accessibilityConfiguration" label="RegisterButton"/>
                                        <state key="normal" title="Register"/>
                                        <connections>
                                            <action selector="register:" destination="W2I-ze-ksQ" eventType="touchUpInside" id="ZwQ-em-iMW"/>
                                        </connections>
                                    </button>
                                </subviews>
...
